--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -4,13 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Issues Leaderboard</title>
-    <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
+    <title>Bug Shootout</title>
   </head>
-
   <body>
     <%= @inner %>
     <div id="app"></div>
