--- a/web/static/js/components/Activity.scss
+++ b/web/static/js/components/Activity.scss
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 100px;
   position: fixed;
   top: 0;
   right: 0;
@@ -13,10 +12,9 @@
 }
 
 .message {
+  align-items: center;
+  display: flex;
+  flex: 1;
   font-size: 50px;
   text-align: center;
-}
-
-.video {
-  margin: 50px;
 }
